--- a/src/app/country/capital/capital.component.html
+++ b/src/app/country/capital/capital.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3>Por Pais</h3>
+  <h3>Por Capital</h3>
   <div class="row">
     <app-search-bar (onEnter)="getCountry($event)"></app-search-bar>
   </div>
