--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,9 +1,10 @@
-<div class="search-container">
+<form (ngSubmit)="onSubmit()" autocomplete="off" class="search-container">
   <input
     type="text"
     name="search"
     id="search"
+    [(ngModel)]="term"
     placeholder="Buscar..."
     class="form-control"
   />
-</div>
+</form>
