--- a/src/app/country/capital/capital.component.html
+++ b/src/app/country/capital/capital.component.html
@@ -1,7 +1,11 @@
 <div class="container">
   <h3>Por Capital</h3>
   <div class="row">
-    <app-search-bar (onEnter)="getCountry($event)"></app-search-bar>
+    <app-search-bar
+      (onEnter)="getCountry($event)"
+      (onDebouncer)="getSuggestion($event)"
+      [suggestions]="suggestions"
+    ></app-search-bar>
   </div>
   <div class="row">
     <app-countries-table
