--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,10 +1,26 @@
-<form (ngSubmit)="onSubmit()" autocomplete="off" class="search-container">
+<form
+  (ngSubmit)="onSubmit()"
+  autocomplete="off"
+  class="search-container"
+  novalidate
+>
   <input
+    #term
     type="text"
     name="search"
     id="search"
-    [(ngModel)]="term"
     placeholder="Buscar..."
     class="form-control"
+    (input)="keyPress()"
   />
+
+  <ul class="list-group" *ngIf="showSuggestions">
+    <li
+      class="list-group-item pointer"
+      *ngFor="let item of suggestions"
+      (click)="selectedSuggestion(item)"
+    >
+      {{ item }}
+    </li>
+  </ul>
 </form>
